@@ -307,7 +307,7 @@ BEGIN
     EDITTEXT        IDC_3D_STEREO_MS,304,58,36,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "ZPD",IDC_STATIC,266,73,50,10
     EDITTEXT        IDC_3D_STEREO_ZPD,304,71,36,12,ES_RIGHT | ES_AUTOHSCROLL
-    CONTROL         "Enable Ambient Occlusion",IDC_AO_ALL_TABLES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,57,100,10
+    CONTROL         "Dynamic Ambient Occlusion",IDC_AO_ALL_TABLES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,57,100,10
     LTEXT           "Visual Nudge Strength",IDC_STATIC,162,97,100,10
     EDITTEXT        IDC_NUDGE_STRENGTH,246,95,36,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "FPS limiter/VSync",IDC_STATIC,162,126,100,10
